Bug 602141 - Right arrow navigation broken on later contenteditable content on single line; r=bzbarsky a=blocking-final+